--- a/package.json
+++ b/package.json
@@ -20,11 +20,23 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.8",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/react": "^6.1.21",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-gatsby": "^1.0.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "husky": "=4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "lint-staged": ">=10",
     "prettier-standard": "^16.4.1"
   },
@@ -34,12 +46,15 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby build",
+    "build-storybook": "build-storybook",
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "format": "prettier-standard --changed --lint --format",
     "serve": "gatsby serve",
     "start": "npm run develop",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "storybook": "start-storybook -p 6006",
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -50,7 +65,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged && yarn test"
     }
   },
   "lint-staged": {
